# rusty-nussknacker

./: Cargo.toml  Dockerfile  README.md  build.rs  sample_scenario.json
benches/: javascript_expression_benchmark.rs  scenario_benchmark.rs
snapshots/: query_runtime.snap
src/: customnodes.rs  data.rs  expression.rs  interpreter.rs  javascriptexpression.rs  lib.rs  main.rs  runtime.rs  scenariomodel.rs
src/data/: jsonmodel.rs  parse.rs
src/expression/: parse.rs
src/interpreter/: compiler.rs  data.rs
src/interpreter/compiler/: customnode.rs  filter.rs  sink.rs  split.rs  switch.rs  variable.rs
src/runtime/: compiler.rs  data.rs
tests/: scenario_execution.rs
tests/scenarios/: with_custom.json  with_split.json
