[package]
name = "rusty-nussknacker"
version = "0.1.0"
authors = ["Maciek Próchniak <maciek.prochniak@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
js-sandbox = "0.2.0-rc.0"
regex = "1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "javascript_expression_benchmark"
harness = false

[[bench]]
name = "scenario_benchmark"
harness = false