[package]
name = "rusty-nussknacker"
version = "0.1.0"
authors = ["Maciek Próchniak <maciek.prochniak@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
regex = "1"
#using a bit older version, since newer have dependencies conflicts with js-sandbox dependencies...
clap = { version = "3.2.2", features = ["derive"] }
once_cell = "1.9.0"
rocket = "0.5.0-rc.2"
async-trait = "0.1.59"
futures = "0.3.25"

#this is just the library that I found simplest to use, to invoke JS expressions. 
#js-sandbox = "0.2.0-rc.0"
js-sandbox = { path = "js-sandbox/js-sandbox" }

[dev-dependencies]
criterion = "0.3"
tokio-test = "*"

[build-dependencies]
deno_core = "0.114"

[[bench]]
name = "javascript_expression_benchmark"
harness = false

[[bench]]
name = "scenario_benchmark"
harness = false
